[gd_scene load_steps=2 format=2]

[ext_resource path="res://server_list_item.gd" type="Script" id=1]

[node name="item" type="ColorRect"]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0.333333, 0.333333, 0.333333, 1 )
script = ExtResource( 1 )

[node name="Control" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 18.0

[node name="name" type="Label" parent="Control"]
margin_right = 36.0
margin_bottom = 14.0
text = "name"

[node name="ip" type="Label" parent="Control"]
margin_left = 40.0
margin_right = 52.0
margin_bottom = 14.0
text = "ip"

[node name="port" type="Label" parent="Control"]
margin_left = 56.0
margin_right = 82.0
margin_bottom = 14.0
text = "port"

[node name="current_players" type="Label" parent="Control"]
margin_left = 86.0
margin_right = 184.0
margin_bottom = 14.0
text = "current_players"

[node name="divider" type="Label" parent="Control"]
margin_left = 188.0
margin_right = 193.0
margin_bottom = 14.0
text = "/"

[node name="max_players" type="Label" parent="Control"]
margin_left = 197.0
margin_right = 276.0
margin_bottom = 14.0
text = "max_players"

[connection signal="gui_input" from="." to="." method="_on_item_gui_input"]
